--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-pocket-dict",
   "version": "0.1.0",
+  "proxy": "https://aicj966nz7.execute-api.us-east-1.amazonaws.com",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://supun-kandambige.com --acl public-read"
+    "deploy": "aws s3 sync build/ s3://dictionary.supun-kandambige.com --acl public-read"
   },
   "eslintConfig": {
     "extends": [
