--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-pocket-dict",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "chai": "^4.3.4",
     "mocha": "^9.0.2"
   }
 }
