--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-pocket-dict",
+  "proxy":"https://aicj966nz7.execute-api.us-east-1.amazonaws.com",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "react-virtualized": "^9.22.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
