--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "my-pocket-dict",
-  "proxy":"https://aicj966nz7.execute-api.us-east-1.amazonaws.com",
+  "proxy": "https://aicj966nz7.execute-api.us-east-1.amazonaws.com",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
