--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_VERSION=${npm_package_version}
 REACT_APP_API_URL=api-url
 REACT_APP_CLIENT_ID=google-cloud-client-id
-REACT_APP_CALLBACK_URL=http://localhost:3000/login
+REACT_APP_URL=${npm_package_homepage}
