--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-pocket-dict",
-  "version": "1.0.7",
+  "version": "1.0.9",
+  "homepage": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.2",
@@ -22,10 +23,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://dictionary.supun-kandambige.com --acl public-read"
+    "s3-deploy": "aws s3 sync build/ s3://dictionary.supun-kandambige.com --acl public-read",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "gh-pages": "^3.2.3",
     "mocha": "^9.0.2"
   }
 }
